# grasshopper

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  agentic-sessions.md  pyproject.toml  pytest.ini  test_import.py  type_test.py
.github/workflows/: build-and-release.yml  lint.yml  test.yml
Grasshopper/: MANIFEST.in  config  main.py  requirements-test.txt  requirements.txt  setup.py
Grasshopper/grasshopper/: __init__.py  agent.py  api.py  app.py  bacpypes3_scanner.py  flask_app.py  parser.py  rdf_components.py  remote_web_host.py  requirements.txt  restplus.py  serializers.py  version.py  web_app.py
Grasshopper/grasshopper/models/: __init__.py  data.py  message_file.py  message_status.py  network_data.py
Grasshopper/grasshopper/webroot/: index.html  script.js  styles.css
archived/examples/: main.py
archived/grasshopper/: graph.py
archived/grasshopper/utils/: text_utils.py
examples/: graph.ttl  main.py
grasshopper/: graph.py
grasshopper-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
grasshopper-frontend/public/: index.html
grasshopper-frontend/src/: App.vue  main.js
grasshopper-frontend/src/components/: CompareLoad.vue  ConfigMenu.vue  ControlMenus.vue  EdgeCard.vue  ExampleNodes.json  HiddenItemsMenu.vue  LegendMenu.vue  NetworkDiagram.vue  NetworkHeader.vue  NodeCard.vue  NoteCard.vue  SearchCard.vue
grasshopper-frontend/src/parsers/: parser.js
grasshopper-frontend/src/router/: index.js
grasshopper-frontend/src/stores/: index.js
grasshopper-frontend/src/vendors/: bacnet_vendors.json
grasshopper-frontend/src/views/: NetworkGraphView.vue
scripts/: compare_rdf_graphs.py  convert_ttl_to_html_graph.py  convert_ttl_to_json.py  discover_routers_and_devices.py  run_tests.sh
tests/: TESTING.md  check_rdf_components.py  conftest.py
tests/agent/: README.md  __init__.py  conftest.py  test_agent_bacnet.py  test_agent_config.py  test_agent_webserver.py  test_agent_with_volttron_mock.py
tests/api/: README.md  __init__.py  conftest.py  test_api_endpoints.py  test_basic_endpoints.py  test_complex_endpoints.py  test_debug_uploads.py  test_file_operations.py  test_fixture.py  test_models.py  test_simple.py
tests/rdf/: test_rdf_components.py
