[tool.poetry]
name = "grasshopper"
version = "0.1.0"
description = "Grasshopper is an open-source project designed to tackle the complex world of smart building networks."
authors = ["Justin Scott <jscott3201@gmail.com>"]
readme = "README.md"
packages = [{ include = "grasshopper" }]

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"
bacpypes3 = "^0.0.86"
pydantic = "^2.6.4"
pyvis = "^0.3.2"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"