[tool.poetry]
name = "grasshopper"
version = "0.1.0"
description = "Grasshopper is an open-source project designed to tackle the complex world of smart building networks."
authors = ["Justin Scott <jscott3201@gmail.com>"]
readme = "README.md"
packages = [{ include = "grasshopper" }]

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"
bacpypes3 = "^0.0.86"
pydantic = "^2.6.4"
pyvis = "^0.3.2"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "grasshopper.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true